service-mesh/bookinfo/10_mtls/02_mtls_peerauthentication.yaml
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: bookinfo-enable-mtls
  namespace: bookinfo
spec:
  mtls:
    mode: STRICT
